# Waveless

./: .gitignore  COPYING.txt  Cargo.toml  README.md
.cargo/: config.toml
.zed/: settings.json
binary/: Cargo.toml
binary/src/: binary.rs  lib.rs
commons/: Cargo.toml
commons/src/: build.rs  endpoint.rs  lib.rs  logger.rs  logging.rs  output.rs  project.rs  runtime.rs  serialize.rs
commons/src/auth/: mod.rs  mysql.rs
commons/src/databases/: mod.rs  mysql.rs
commons/src/execute/: mod.rs  mysql.rs
commons/src/schema/: mod.rs  mysql.rs
compiler/: Cargo.toml
compiler/src/: bootstrap.rs  build.rs  compiler_cx.rs  config.rs  config_loader.rs  discovery.rs  lib.rs  main.rs  new.rs  runtime_project.rs
config/: Cargo.toml
config/src/: lib.rs  project.rs
databases/: Cargo.toml
databases/src/: lib.rs  schema.rs
docs/: biome.json  package.json  rspress.config.ts  tsconfig.json
docs/docs/: _nav.json  index.md
docs/docs/api/: index.mdx
docs/docs/guide/start/: introduction.md
endpoint/: Cargo.toml
endpoint/src/: lib.rs
executor/: Cargo.toml
executor/src/: build_loader.rs  databases.rs  execute.rs  execute_handler.rs  frontend_options.rs  internal_endpoints.rs  lib.rs  main.rs  request.rs  request_handler.rs  router_loader.rs  runtime_build.rs  runtime_cx.rs  server.rs
executor/src/services/: execute_wrapper.rs  handler.rs  mod.rs  request_params.rs  router.rs
executor/src/services/auth/: capture.rs  login.rs  mod.rs  signup.rs
executor/src/services/auth/session/: logout.rs  mod.rs  watchdog.rs
frontend/: Cargo.toml
frontend/src/: main.rs
schema/: Cargo.toml
schema/src/: endpoint.rs  entry.rs  lib.rs
schema/src/databases/: mod.rs
src/: main.rs
