[package]
name = "waveless_binary"
edition = "2024"

[dependencies]
waveless_schema = { workspace = true, features = ["postcard_codec"] }
waveless_config = { workspace = true, features = ["postcard_codec"] }
rustyrosetta = { workspace = true, features = ["all"] }
serde.workspace = true
serde_with.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
chrono.workspace = true
garde.workspace = true
half.workspace = true
rust_decimal.workspace = true
struct-patch.workspace = true
getset.workspace = true
either.workspace = true
derive_more.workspace = true
anyhow.workspace = true
