[package]
name = "waveless_commons"
edition = "2024"

[dependencies]
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
compact_str.workspace = true
iocraft.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
