[package]
name = "waveless_commons"
edition = "2024"

[dependencies]
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sea-orm.workspace = true
sea-schema.workspace = true
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
smallbox.workspace = true
rclite.workspace = true
crc32fast.workspace = true
chrono.workspace = true
garde.workspace = true
half.workspace = true
struct-patch.workspace = true
getset.workspace = true
either.workspace = true
iocraft.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
anyhow.workspace = true
