[package]
name = "waveless_commons"
version = "0.0.0"
edition = "2024"

[dependencies]
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sea-orm.workspace = true
sea-schema.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_with.workspace = true
serde_json.workspace = true
toml.workspace = true
http.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
dashmap.workspace = true
smallbox.workspace = true
rclite.workspace = true
rand.workspace = true
typetag.workspace = true
async-trait.workspace = true
dyn-clone.workspace = true
crc32fast.workspace = true
chrono.workspace = true
garde.workspace = true
half.workspace = true
regex.workspace = true
itertools.workspace = true
struct-patch.workspace = true
getset.workspace = true
either.workspace = true
iocraft.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
anyhow.workspace = true
thiserror.workspace = true
