[package]
name = "waveless_compiler"
edition = "2024"

[dependencies]
waveless_commons.workspace = true
# waveless_binary.workspace = true
# waveless_databases.workspace = true
# waveless_endpoint = { workspace = true, features = ["toml_codec"] }
# waveless_config = { workspace = true, features = ["toml_codec"] }
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sea-orm.workspace = true
sea-schema.workspace = true
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
clap.workspace = true
crc32fast.workspace = true
owo-colors.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nestify.workspace = true
chrono.workspace = true
garde.workspace = true
half.workspace = true
rust_decimal.workspace = true
struct-patch.workspace = true
getset.workspace = true
either.workspace = true
derive_more.workspace = true
anyhow.workspace = true
