[package]
name = "waveless_compiler"
version = "0.0.0"
description = "Generate APIs and UIs from the application data model."
edition = "2024"

[dependencies]
waveless_commons.workspace = true
waveless_executor.workspace = true
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sea-orm.workspace = true
sea-schema.workspace = true
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
mimalloc.workspace = true
clap.workspace = true
crc32fast.workspace = true
iocraft.workspace = true
owo-colors.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nestify.workspace = true
chrono.workspace = true
garde.workspace = true
struct-patch.workspace = true
getset.workspace = true
either.workspace = true
derive_more.workspace = true
anyhow.workspace = true
