[package]
name = "waveless_databases"
edition = "2024"

[dependencies]
waveless_commons.workspace = true
waveless_binary.workspace = true
waveless_endpoint = { workspace = true, features = ["postcard_codec"] }
waveless_config = { workspace = true, features = ["postcard_codec"] }
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
sqlx.workspace = true
sea-orm.workspace = true
sea-schema.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
smallbox.workspace = true
dashmap.workspace = true
clap.workspace = true
crc32fast.workspace = true
chrono.workspace = true
owo-colors.workspace = true
rclite.workspace = true
tracing.workspace = true
nestify.workspace = true
getset.workspace = true
either.workspace = true
derive_more.workspace = true
anyhow.workspace = true
thiserror.workspace = true
