[package]
name = "waveless_endpoint"
edition = "2024"

[dependencies]
waveless_commons.workspace = true
waveless_config.workspace = true
rustyrosetta = { workspace = true, features = ["all"] }
sea-schema.workspace = true
serde.workspace = true
serde_with.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
chrono.workspace = true
garde.workspace = true
half.workspace = true
rust_decimal.workspace = true
struct-patch.workspace = true
getset.workspace = true
either.workspace = true
tracing.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
anyhow.workspace = true

[features]
default = []
toml_codec = []
postcard_codec = [] # actually doing nothing, added for clarity
