[package]
name = "waveless_executor"
edition = "2024"

[dependencies]
waveless_commons.workspace = true
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["full"] }
tower-http-cache.workspace = true
tower_governor.workspace = true
http.workspace = true
matchit.workspace = true
sqlx.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
dashmap.workspace = true
rclite.workspace = true
mimalloc.workspace = true
clap.workspace = true
chrono.workspace = true
owo-colors.workspace = true
regex.workspace = true
tracing.workspace = true
nestify.workspace = true
getset.workspace = true
either.workspace = true
derive_more.workspace = true
anyhow.workspace = true
thiserror.workspace = true
