[package]
name = "waveless_frontend"
edition = "2024"

[dependencies]
waveless_commons.workspace = true
waveless_binary.workspace = true
waveless_compiler.workspace = true
waveless_executor.workspace = true
waveless_databases.workspace = true
waveless_schema = { workspace = true, features = ["toml_codec"] }
waveless_config = { workspace = true, features = ["toml_codec"] }
rustyrosetta = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
arrayvec.workspace = true
compact_str.workspace = true
clap.workspace = true
iocraft.workspace = true
owo-colors.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nestify.workspace = true
chrono.workspace = true
getset.workspace = true
either.workspace = true
derive_more.workspace = true
anyhow.workspace = true
